# tlgrm

./: .claude-config  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_BENCHMARKS.md  BUILD_PROCESS.md  BUILD_STANDARDS.md  CLAUDE.md  DISCORD_FEATURES_STATUS.md  DISCORD_TOOLS_COMPLETION.md  DMG_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MCP_BUSINESS_FEATURES.md  MCP_GAP_ANALYSIS.md  MCP_IMPLEMENTATION_STRATEGY.md  MCP_PREMIUM_FEATURES.md  MCP_README.md  MCP_STARS_FEATURES.md  MCP_WALLET_FEATURES.md  MIGRATION_PLAN.md  Makefile  README.md  README_EN.txt  README_RU.txt  SESSION_PROGRESS_2025-11-24.md  UNIFIED_PYTHON_STRUCTURE.md  apply-patches.sh  create_beautiful_dmg.sh  create_beige_bg.py  create_dmg.sh  diagnose_tdata.sh  initiate.pkg  quick_mcp_test.sh  run_mcp_tests.sh  test-tdata-logging.sh  test_all_mcp_tools.sh  test_mcp.py  test_mcp.sh  test_mcp_tools.sh  (+3 more)
pythonMCP/: .coveragerc  .env.example  GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  METRICS_REFERENCE.md  PROMETHEUS_IMPLEMENTATION.md  README.md  VALIDATION_QUICK_REFERENCE.md  VALIDATION_USAGE.md  benchmark_results.json  config.example.toml  example_validation_output.txt  fix_tests.py  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  test_validation.py
pythonMCP/docs/: cache.md  monitoring.md
pythonMCP/scripts/: benchmark.py
pythonMCP/src/: ipc_bridge.py  mcp_server.py
pythonMCP/tests/: conftest.py  test_bridge_tools.py  test_cache.py  test_cache_sqlite_integration.py  test_config_validation.py  test_health_check.py  test_ipc_bridge.py  test_mcp_tools.py  (+1 more)
(+206 files in other folders)
