# Simple project metadata and tool configuration
# No Poetry needed - just use: pip install -r requirements.txt

[project]
name = "telegram-mcp"
version = "2.0.0"
description = "Unified Python MCP server for Telegram with optional AI/ML features"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
